--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary: #F24150;
+  --secondary: #D93636;
+  --accent: #F2B705;
+  --neutralDark: #261C1F;
+  --neutralLight: #A69286;
+}
